# vk-triangle

./: .gitignore  CMakeLists.txt  flake.nix
src/: checkSuitableUtils.cpp  main.cpp  vkTreang.cpp  vkTreang.h
